# arithmetic-coding

./: .gitattributes  .rustfmt.toml  CHANGELOG.md  Cargo.toml  README.md  deny.toml
.github/: dependabot.yml
.github/workflows/: CI.yml  coverage.yml  release.yml
arithmetic-coding-core/: CHANGELOG.md  Cargo.toml
arithmetic-coding-core/src/: bitstore.rs  fixed_length.rs  lib.rs  model.rs
arithmetic-coding-core/src/model/: fixed_length.rs  max_length.rs  one_shot.rs
benches/: sherlock.rs  sherlock.txt
benches/common/: mod.rs
examples/: README.md  concatenated.rs  fenwick_adaptive.rs  fenwick_context_switching.rs  fixed_length.rs  hello_world.rs  integer.rs  max_length.rs  sherlock.rs  symbolic.rs
examples/common/: mod.rs
examples/fenwick/: context_switching.rs  mod.rs  simple.rs
fenwick-model/: CHANGELOG.md  Cargo.toml
fenwick-model/src/: context_switching.rs  lib.rs  simple.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: fuzz_target_1.rs  round_trip.rs
src/: bitstore.rs  common.rs  decoder.rs  encoder.rs  fixed_length.rs  lib.rs  model.rs  probability.rs  util.rs
tests/: concatenated.rs  fixed_length.rs  fuzz.rs  max_length.rs  precision_checking.rs  sherlock.rs
tests/common/: mod.rs
