[package]
name = "arithmetic-coding"
description = "fast and flexible arithmetic coding library"
version = "0.3.1"
edition = "2021"
license = "MIT"
keywords = ["compression", "encoding", "arithmetic-coding", "lossless"]
categories = ["compression", "encoding", "parsing"]
repository = "https://github.com/danieleades/arithmetic-coding"

[workspace]
members = [".", "arithmetic-coding-core", "fenwick-model"]

[workspace.dependencies]
thiserror = "1.0.30"

[workspace.lints.clippy]
cargo = "deny"
all = "deny"
nursery = "warn"
pedantic = "warn"

[dependencies]
arithmetic-coding-core = { path = "./arithmetic-coding-core", version = "0.3.0" }
bitstream-io = "2.0.0"
thiserror = { workspace = true }

[dev-dependencies]
fenwick-model = { path = "./fenwick-model", version = "0.1.0" }
criterion = "0.5.1"
test-case = "3.0.0"

[[bench]]
name = "sherlock"
harness = false

[lints]
workspace = true
