[workspace]
members = [".", "arithmetic-coding-core", "fenwick-model"]

[workspace.package]
rust-version = "1.83.0"
edition = "2021"
license = "MIT"
keywords = ["compression", "encoding", "arithmetic-coding", "lossless"]
categories = ["compression", "encoding", "parsing"]
repository = "https://github.com/danieleades/arithmetic-coding"

[workspace.dependencies]
thiserror = "2.0.12"

[workspace.lints.clippy]
cargo = "deny"
all = "deny"
nursery = "warn"
pedantic = "warn"

[package]
name = "arithmetic-coding"
description = "fast and flexible arithmetic coding library"
version = "0.5.0"
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arithmetic-coding-core = { path = "./arithmetic-coding-core", version = "0.4.1" }
bitstream-io = "4.3.0"
thiserror = { workspace = true }

[dev-dependencies]
fenwick-model = { path = "./fenwick-model", version = "0.1.1" }
criterion = "0.6.0"
test-case = "3.0.0"

[[bench]]
name = "sherlock"
harness = false

[lints]
workspace = true
