[package]
name = "arithmetic-coding-core"
description = "core traits for the 'arithmetic-coding' crate"
version = "0.4.0"
edition.workspace = true
license.workspace = true
keywords.workspace = true
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
thiserror = { workspace = true }

[lints]
workspace = true
