[package]
name = "fenwick-model"
version = "0.1.0"
edition = "2021"
description = "fenwick-tree-based test utils for the 'arithmetic-coding' crate"
license = "MIT"
keywords = [
    "compression",
    "encoding",
    "arithmetic-coding",
    "lossless",
    "fenwick-tree",
]
categories = ["compression", "encoding", "parsing"]
repository = "https://github.com/danieleades/arithmetic-coding"

[dependencies]
arithmetic-coding-core = { path = "../arithmetic-coding-core", version = "0.3.0" }
fenwick = "2.0.0"
thiserror = "1.0.30"
