[package]
name = "fenwick-model"
version = "0.1.1"
edition.workspace = true
description = "fenwick-tree-based test utils for the 'arithmetic-coding' crate"
license.workspace = true
keywords = [
    "compression",
    "encoding",
    "arithmetic-coding",
    "lossless",
    "fenwick-tree",
]
categories.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
arithmetic-coding-core = { path = "../arithmetic-coding-core", version = "0.4.1" }
fenwick = "2.0.0"
thiserror = { workspace = true }
